@@ -32,8 +32,11 @@ import glide.api.models.exceptions.RequestException;
 import glide.ffi.resolvers.OpenTelemetryResolver;
 import glide.internal.GlideCoreClient;
 import glide.utils.BufferUtils;
+import glide.utils.Java8Utils;
+import java.math.BigInteger;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -50,25 +53,21 @@ import response.ResponseOuterClass.Response;
 @RequiredArgsConstructor
 public class CommandManager {
 
-    /**
-     * Set of blocking command names (uppercase) that have their own timeout in the command arguments.
-     * These commands should NOT use Java-side timeout - Rust handles their timeout based on the
-     * command's timeout argument.
-     */
     private static final Set<String> BLOCKING_COMMAND_NAMES =
-            Set.of(
-                    "BLPOP",
-                    "BRPOP",
-                    "BLMOVE",
-                    "BZPOPMAX",
-                    "BZPOPMIN",
-                    "BRPOPLPUSH",
-                    "BLMPOP",
-                    "BZMPOP",
-                    "XREAD",
-                    "XREADGROUP",
-                    "WAIT",
-                    "WAITAOF");
+            Collections.unmodifiableSet(
+                    Java8Utils.createSet(
+                            "BLPOP",
+                            "BRPOP",
+                            "BLMOVE",
+                            "BZPOPMAX",
+                            "BZPOPMIN",
+                            "BRPOPLPUSH",
+                            "BLMPOP",
+                            "BZMPOP",
+                            "XREAD",
+                            "XREADGROUP",
+                            "WAIT",
+                            "WAITAOF"));
 
     /** Core client connection. */
     private final GlideCoreClient coreClient;
@@ -309,7 +308,7 @@ public class CommandManager {
             List<GlideString> args,
             GlideExceptionCheckedFunction<Response, T> responseHandler) {
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit script."));
             return errorFuture;
@@ -337,7 +336,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -350,7 +349,7 @@ public class CommandManager {
             Route route,
             GlideExceptionCheckedFunction<Response, T> responseHandler) {
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit script."));
             return errorFuture;
@@ -380,7 +379,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -470,7 +469,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit cluster scan."));
             return errorFuture;
@@ -530,7 +529,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -635,7 +634,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit command."));
             return errorFuture;
@@ -673,7 +672,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -690,7 +689,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit command."));
             return errorFuture;
@@ -726,7 +725,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -811,7 +810,7 @@ public class CommandManager {
             Integer timeoutOverrideMs) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit batch."));
             return errorFuture;
@@ -828,7 +827,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -1005,6 +1004,20 @@ public class CommandManager {
                     result[i] = intValue;
                     break;
 
+                case ',': // Double
+                    result[i] = buffer.getDouble();
+                    break;
+
+                case '?': // Boolean
+                    result[i] = buffer.get() != 0;
+                    break;
+
+                case '(': // BigNumber
+                    int bigNumberLen = buffer.getInt();
+                    String bigNumberStr = BufferUtils.decodeUtf8(buffer, bigNumberLen);
+                    result[i] = new BigInteger(bigNumberStr);
+                    break;
+
                 case '#': // Complex type (serialized as string)
                     int complexLen = buffer.getInt();
                     if (expectUtf8Response) {
@@ -1051,7 +1064,7 @@ public class CommandManager {
             spanPtr = OpenTelemetryResolver.createLeakedOtelSpan(requestType.name());
         }
 
-        var builder =
+        CommandRequest.Builder builder =
                 CommandRequest.newBuilder()
                         .setSingleCommand(commandBuilder.setRequestType(requestType).build());
 
@@ -1073,7 +1086,7 @@ public class CommandManager {
             spanPtr = OpenTelemetryResolver.createLeakedOtelSpan(requestType.name());
         }
 
-        var builder =
+        CommandRequest.Builder builder =
                 CommandRequest.newBuilder()
                         .setSingleCommand(commandBuilder.setRequestType(requestType).build());
 
@@ -1100,7 +1113,8 @@ public class CommandManager {
 
         if (options.isPresent()) {
             BatchOptions opts = options.get();
-            var batchBuilder = prepareCommandRequestBatchOptions(batch.getProtobufBatch(), opts);
+            CommandRequestOuterClass.Batch.Builder batchBuilder =
+                    prepareCommandRequestBatchOptions(batch.getProtobufBatch(), opts);
             builder.setBatch(batchBuilder.setRaiseOnError(raiseOnError).build());
         } else {
             builder.setBatch(batch.getProtobufBatch().setRaiseOnError(raiseOnError).build());
